// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API Server should authenticate correctly 1`] = `Object {}`;

exports[`API Server should handle graphql queries 1`] = `
Object {
  "data": Object {
    "me": null,
  },
}
`;

exports[`API Server should handle graphql queries 2`] = `
Object {
  "data": Object {
    "me": null,
  },
}
`;

exports[`API Server should handle graphql queries with tokens 1`] = `
Object {
  "data": Object {
    "me": Object {
      "id": "Jo50Aa3v0bIGl0wZBdx2T92B30",
    },
  },
}
`;

exports[`API Server should handle graphql queries with tokens in cookies 1`] = `
Object {
  "data": Object {
    "me": Object {
      "id": "Jo50Aa3v0bIGl0wZBdx2T92B30",
    },
  },
}
`;

exports[`API Server should silently ignore graphql queries with bad tokens 1`] = `
Object {
  "data": Object {
    "me": null,
  },
}
`;
